--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
 .SearchBox {
-  margin-bottom: 10px;
+  margin-right: 20px;
   padding: 10px;
   border-radius: 10px;
   background-color: aliceblue;
   position: fixed;
   top: 0;
-  width: 100%;
   z-index: 1000;
 }
 
 .Cards {
   margin-top: 80px;
+  margin-left: 30px;
 }
 
 .dots {
